fix: allowed wrapping + fixed input width

--- a/src/Components/PaginationNav/Pagination.scss
+++ b/src/Components/PaginationNav/Pagination.scss
@@ -11,10 +11,11 @@ $cf-pagination--direction-icon: $g14-chromium;
 .cf-pagination,
 .cf-pagination-input--container,
 .cf-pagination--container {
-  width: 100%;
   display: flex;
   align-items: center;
   padding: 0;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .cf-pagination--item--container {
